Bug 37848 - Squash GCC 4.6 warnings in OpenSSL code
Summary: Squash GCC 4.6 warnings in OpenSSL code
Status: RESOLVED FIXED
Alias: None
Product: Wocky
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/wj...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2011-06-02 04:01 UTC by Will Thompson
Modified: 2011-07-07 04:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Will Thompson 2011-06-02 04:01:39 UTC
😼
Comment 1 Jonny Lamb 2011-07-07 04:01:30 UTC
Even my browser history tells me I've already reviewed this.
Comment 2 Will Thompson 2011-07-07 04:06:38 UTC
10q


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.