OpenSSL: squash GCC 4.6 -Wunused-but-set-variable warnings

Ironically these variables were added to squash warnings from static
analysis …

Reviewed-by: Jonny Lamb <jonny.lamb@collabora.co.uk>
Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=37848>